# r3broot

./: .zenodo.json  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS  codemeta.json
.github/workflows/: main.yml
actaf/: ActafLinkDef.h  CMakeLists.txt
fi23a/: R3BFi23aDigitizerCal.h  R3BFi23aDigitizerHit.cxx  R3BFi23aDigitizerHit.h
fi23b/: R3BFi23bDigitizerCal.h  R3BFi23bDigitizerHit.cxx  R3BFi23bDigitizerHit.h
fi30/: R3BFi30DigitizerCal.h  R3BFi30DigitizerHit.cxx  R3BFi30DigitizerHit.h
fi31/: R3BFi31DigitizerCal.h  R3BFi31DigitizerHit.cxx  R3BFi31DigitizerHit.h
fi32/: R3BFi32DigitizerCal.h  R3BFi32DigitizerHit.cxx  R3BFi32DigitizerHit.h
fi33/: R3BFi33DigitizerCal.h  R3BFi33DigitizerHit.cxx  R3BFi33DigitizerHit.h
fiber/: R3BFiberMAPMTCal2Hit.cxx
field/: R3BGladFieldMap.cxx  R3BGladFieldMap.h
gconfig/: SetCuts.C
neuland/: CMakeLists.txt
neuland/calibration/cal_to_hit/: CMakeLists.txt  NeulandCalToHitLinkDef.h  R3BNeulandCalToHitPar.cxx  R3BNeulandCalToHitPar.h  R3BNeulandCalToHitParTask.cxx  R3BNeulandCalToHitParTask.h
neuland/calibration/cal_to_hit/engine/: BarPositionFilter.cxx  BarPositionFilter.h  R3BNeulandCosmicEngine.h  R3BNeulandLSQREngineAdaptor.cxx  R3BNeulandLSQREngineAdaptor.h  R3BNeulandMille.cxx  R3BNeulandMille.h  R3BNeulandMillepede.cxx  R3BNeulandMillepede.h  R3BNeulandPede.cxx  R3BNeulandPositionCal.cxx  R3BNeulandPositionCal.h  Utilities.h
pdc/: PdcLinkDef.h  R3BGeoPdcPar.h  R3BPdcCal2Hit.cxx  R3BPdcCal2Hit.h  R3BPdcContFact.cxx  R3BPdcContFact.h  R3BPdcHitModulePar.h  R3BPdcHitPar.cxx  R3BPdcHitPar.h
r3bbase/: CMakeLists.txt  R3BFileSource.cxx  R3BGlobalAnalysisS494.cxx  R3BGlobalAnalysisS494.h  R3BIOConnector.h  R3BLinkDef.h  R3BPreTrackS494.cxx  R3BPreTrackS494.h  R3BValueError.h
r3bdata/: CMakeLists.txt  DataLinkDef.h  R3BDetectorList.h  R3BTrackData.cxx
r3bgen/: R3BAsciiGenerator.cxx  R3BAsciiGenerator.h  R3BIonGenerator.cxx  R3BIonGenerator.h
r3bsource/: CMakeLists.txt  SourceLinkDef.h
tcal/: R3BTCalContFact.cxx
tof/: R3BTofdDigitizerHit.cxx  R3BTofdDigitizerHit.h  R3BTofdTofiCal2HitS494.cxx
tracking/: CMakeLists.txt  R3BFragmentFitterChi2S494.cxx  R3BFragmentFitterChi2S494.h  R3BFragmentTrackerS494.cxx  R3BFragmentTrackerS494.h  R3BOptimizeGeometryS494.cxx  R3BOptimizeGeometryS494.h  R3BOptimizeMagfieldS494.cxx  R3BOptimizeMagfieldS494.h  R3BTPropagator.cxx  TrackingLinkDef.h
(+63 files in other folders)
